Настройка tailwind, верстка header, ngIf и директива outside - для open-close modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-[100vh] max-w-[1440px] mx-auto border">
+<div class="flex flex-col min-h-[100vh] max-w-[144rem] mx-auto">
   <app-header></app-header>
   <app-home-page class="grow"></app-home-page>
   <app-footer class="shrink-0"></app-footer>
@@ -7,7 +7,8 @@
 <!-- Настроить rem
 и значения по умолчанию в tailwind.config.js
 -->
-<!-- ng g c components/organisms/popular --skip-tests -->
+<!-- ng g c components/organisms/phoneNumbersSection --skip-tests -->
+<!-- ng g d directives/outside -->
 <!-- ng g c components/molecules/cardAdvantage --skip-tests -->
 <!-- ng g c components/atoms/iFrame --skip-tests -->
 <!-- ng g c pages/homePage --skip-tests -->
