--- a/src/app/components/molecules/social-nav/social-nav.component.html
+++ b/src/app/components/molecules/social-nav/social-nav.component.html
@@ -1,1 +1,6 @@
-<p>social-nav works!</p>
+<div class="flex ml-[3rem] min-w-[5.3rem] justify-between">
+  <img src="../../../../assets/images/smallGrayViber.svg" alt="ссылка на viber">
+  <img src="../../../../assets/images/smallGrayWhapsapp.svg" alt="ссылка на Whatsapp">
+  <img src="../../../../assets/images/smallGrayTelegram.svg " alt="ссылка на telegram">
+</div>
+
