--- a/src/app/components/organisms/footer/footer.component.html
+++ b/src/app/components/organisms/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col  px-[165px] border">
+<div class="flex flex-col  px-[16.5rem] border">
   <div class="flex">
     <p>Оставьте свою почту и станьте первым, кто получит скидку на новые самокаты</p>
     <app-input></app-input>
