--- a/src/app/components/organisms/popular/popular.component.html
+++ b/src/app/components/organisms/popular/popular.component.html
@@ -1,5 +1,5 @@
 <div>
   <p>popular works!</p>
-  <app-title class="px-[165px]"></app-title>
+  <app-title class="px-[16.5rem]"></app-title>
   <app-card-item></app-card-item>
 </div>
