--- a/src/app/components/organisms/service-case/service-case.component.html
+++ b/src/app/components/organisms/service-case/service-case.component.html
@@ -1,5 +1,5 @@
 
-<div class="flex justify-between px-[165px]">
+<div class="flex justify-between">
   <app-card-extra-service></app-card-extra-service>
   <app-card-extra-service></app-card-extra-service>
 </div>
