--- a/src/app/components/organisms/show-popular-categories/show-popular-categories.component.html
+++ b/src/app/components/organisms/show-popular-categories/show-popular-categories.component.html
@@ -1,7 +1,7 @@
 
 <section class="flex flex-col">
   <p>show-popular-categories works!</p>
-  <app-title-unit class="px-[165px]"></app-title-unit>
+  <app-title-unit></app-title-unit>
   <div class="flex flex-col">
     <nav>
     <ul class="">
