--- a/src/app/components/organisms/video-reviews/video-reviews.component.html
+++ b/src/app/components/organisms/video-reviews/video-reviews.component.html
@@ -1,5 +1,5 @@
 <div>
   <p>video-reviews works!</p>
-  <app-title-unit class="px-[165px]"></app-title-unit>
+  <app-title-unit class="px-[16.5rem]"></app-title-unit>
   <app-slider-video-reviews></app-slider-video-reviews>
 </div>
