--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,18 +1,18 @@
 <main class="grow flex flex-col">
   <app-banner></app-banner>
-  <div class="px-[165px]">2</div>
-  <app-show-case class="px-[165px]">
+  <div class="px-[16.5rem]">2</div>
+  <app-show-case class="px-[16.5rem]">
   </app-show-case>
-  <app-service-case class="px-[165px]"></app-service-case>
+  <app-service-case class="px-[16.5rem]"></app-service-case>
   <app-banner></app-banner>
-  <app-show-popular-categories class="px-[165px]">
+  <app-show-popular-categories class="px-[16.5rem]">
   </app-show-popular-categories>
-  <app-commercial-break class="px-[30px]">
+  <app-commercial-break class="px-[3rem]">
   </app-commercial-break>
-  <app-i-frame class="px-[30px]"> </app-i-frame>
+  <app-i-frame class="px-[3rem]"> </app-i-frame>
   <app-reviews></app-reviews>
-  <app-video-reviews class="px-[165px]"></app-video-reviews>
-  <app-new-articles  class="px-[355px]"></app-new-articles>
-  <app-popular class="px-[165px]"></app-popular>
+  <app-video-reviews class="px-[16.5rem]"></app-video-reviews>
+  <app-new-articles></app-new-articles>
+  <app-popular class="px-[16.5rem]"></app-popular>
 </main>
 <!-- git add -A && git commit -m 'Создать структуру главной header, footer и home-page' & git push -->
