--- a/src/app/components/organisms/commercial-break/commercial-break.component.html
+++ b/src/app/components/organisms/commercial-break/commercial-break.component.html
@@ -1,5 +1,5 @@
 <p>commercial-break works!</p>
-<app-title-unit class="px-[165px]"></app-title-unit>
+<app-title-unit class="px-[16.5rem]"></app-title-unit>
 <div>
 <app-card-advantage></app-card-advantage>
 </div>
