--- a/src/app/components/organisms/new-articles/new-articles.component.html
+++ b/src/app/components/organisms/new-articles/new-articles.component.html
@@ -1,5 +1,5 @@
 <div>
   <p>new-articles works!</p>
-  <app-title class="px-[165px]"></app-title>
+  <app-title class="px-[16.5rem]"></app-title>
   <app-slider-articles></app-slider-articles>
 </div>
