--- a/src/app/components/organisms/show-case/show-case.component.html
+++ b/src/app/components/organisms/show-case/show-case.component.html
@@ -1,5 +1,5 @@
 <section class="flex flex-col">
-  <app-title-unit class="px-[165px]"></app-title-unit>
+  <app-title-unit></app-title-unit>
   <div class="flex flex-col">
     <nav>
     <ul class="">
