--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,31 +6,25 @@
   @font-face {
     font-family: Jost;
     font-weight: 400;
-    src: url(/src/assets/fonts/Jost-Regular.woff) format("woff");
-  }
-  @font-face {
-    font-family: Jost;
-    font-weight: 400;
-    src: url('/src/assets/fonts/Jost-Regular.woff2') format("woff2");
+    font-display: swap;
+    src: url('../src/assets/fonts/Jost-Regular.woff') format("woff");
   }
   @font-face {
     font-family: Jost;
     font-weight: 500;
-    src: url('/src/assets/fonts/Jost-Medium.woff') format("woff");
-  }
-  @font-face {
-    font-family: Jost;
-    font-weight: 500;
-    src: url('/src/assets/fonts/Jost-Medium.woff2') format("woff2");
+    font-display: swap;
+    src: url('../src/assets/fonts/Jost-Medium.woff') format("woff");
   }
   @font-face {
     font-family: Jost;
     font-weight: 600;
-    src: url('/src/assets/fonts/Jost-SemiBold.woff') format("woff");
+    font-display: swap;
+    src: url('../src/assets/fonts/Jost-SemiBold.woff') format("woff");
   }
   @font-face {
     font-family: Jost;
-    font-weight: 600;
-    src: url('/src/assets/fonts/Jost-SemiBold.woff2') format("woff2");
+    font-weight: 700;
+    font-display: swap;
+    src: url('../src/assets/fonts/Jost-Bold.woff') format("woff");
   }
 }
